fixed div error and spacing

--- a/client/app/community/[commName]/[forumSlug]/[postId]/postPage.module.css
+++ b/client/app/community/[commName]/[forumSlug]/[postId]/postPage.module.css
@@ -119,7 +119,7 @@
 .yayscore{
     width: 50%;
     height: 3vh;
-    margin-top: 5%;
+    margin-top: 0%;
     text-align: center;
 }
 
@@ -142,7 +142,7 @@
     border: none;
     border-radius: 40px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-right: 32px;
     width: 95%;
     transition: background-color 0.2s ease;
